Clean up loggers, guava usage and instance of usages